--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img height="200"  src="images/capture.png" alt="profile picture"></td>
+        <td><img height="200"  src="images/Capture.PNG" alt="profile picture"></td>
         <td><h1>Yusra Masood</h1>
 
         <pr> <em>Founder of <strong><a href="https://duskysdesk.com/">Dusky's Desk</a></strong>.</em></pr>
