--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <li> Cooking </li>
       <li>Gardening</li>
     </ol>
-  <a href="Contact Details.html">Contact Details</a>
+  <a href="contact details.html">Contact Details</a>
   </body>
   <br>
   <h3>Skills</h3>
